* doc/emacs/mini.texi (Repetition): Further copyedit.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-17  Glenn Morris  <rgm@gnu.org>
+
+	* mini.texi (Repetition): Further copyedit.
+
 2012-10-17  Dani Moncayo  <dmoncayo@gmail.com>
 
 	* mini.texi (Repetition): Copyedit.
