--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* erc-backend.el (erc-with-server-buffer): Autoload as well (bug#12669).
+
 2012-10-15  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* erc.el (erc-log): Make it into a defsubst.
