* lisp/emacs-lisp/gv.el (cond): Same fix as before for `if'. * Makefile.in ($(MAKEFILE_NAME)): Depend on src/lisp.mk as well.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/gv.el (cond): Same fix as before for `if'.
+
 2012-10-18  Glenn Morris  <rgm@gnu.org>
 
 	* dired.el (dired-sort-toggle): Some ls implementations only allow
@@ -7,8 +11,8 @@
 
 2012-10-17  Kenichi Handa  <handa@gnu.org>
 
-	* international/mule.el (set-keyboard-coding-system): Recover
-	input meta mode when the new coding system doesn not use 8-bit.
+	* international/mule.el (set-keyboard-coding-system):
+	Recover input meta mode when the new coding system doesn not use 8-bit.
 	Supply TERMINAL arg to set-input-meta-mode.
 
 2012-10-17  Michael Heerdegen <michael_heerdegen@web.de>  (tiny change)
