* src/fns.c (Fnreverse): Include the problem element when signalling an error.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* fns.c (Fnreverse): Include the problem element when signalling an
+	error (bug#12677).
+
 2012-10-18  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* nsterm.m (ns_select): Check writefds before call to
