--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-19  Kenichi Handa  <handa@gnu.org>
+
+	* font.c (Ffont_at): Fix previous change.
+
 2012-10-19  Eli Zaretskii  <eliz@gnu.org>
 
 	* puresize.h (BASE_PURESIZE): Bump the base value to 1700000.  See
