--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-20  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-units.el (math-extract-units): Properly extract powers
+	of units.
+
 2012-10-20  Daniel Colascione  <dancol@dancol.org>
 
 	* frame.el (make-frame): Set x-display-name as we used to in order
