--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-20  Eli Zaretskii  <eliz@gnu.org>
+
+	* loadup.el: Update comment about uncompiled Lisp files.  (Bug#12395)
+
 2012-10-20  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc-units.el (math-extract-units): Properly extract powers
