* progmodes/flymake.el (flymake-create-temp-inplace): Use file-truename.
Patch from:
http://lists.gnu.org/archive/html/emacs-devel/2012-07/msg00444.html

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-20  Chong Yidong  <cyd@gnu.org>
+
+	* progmodes/flymake.el (flymake-create-temp-inplace): Use
+	file-truename.
+
 2012-10-20  Eli Zaretskii  <eliz@gnu.org>
 
 	* loadup.el: Update comment about uncompiled Lisp files.  (Bug#12395)
