Fix last ChangeLog entry.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,4 +1,4 @@
-2012-10-20  Chong Yidong  <cyd@gnu.org>
+2012-10-20  Arne Jørgensen  <arne@arnested.dk>
 
 	* progmodes/flymake.el (flymake-create-temp-inplace): Use
 	file-truename.
