--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-21  Glenn Morris  <rgm@gnu.org>
+
+	* lisp.mk (lisp): Add cp51932.el and eucjp-ms.el.
+
 2012-10-20  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Port to OpenBSD 5.1.
