--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-21  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (emacs_transform): New variable.
+	(install-etc): Prefer a make variable to a shell variable.
+
 2012-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* Makefile.in ($(MAKEFILE_NAME)): Depend on src/lisp.mk as well.
