Put back old Emacs 22 icons, just don't install them Some people prefer them to the newer icon
* Makefile.in (install-etc): Don't install emacs22 icons.

* etc/images/icons/hicolor/32x32/apps/emacs22.png:
* etc/images/icons/hicolor/16x16/apps/emacs22.png:
* etc/images/icons/hicolor/48x48/apps/emacs22.png:
* etc/images/icons/hicolor/24x24/apps/emacs22.png: Restore old icons.

* etc/images/icons/README: Restore info about emacs22 icons

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-10-21  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (install-etc): Don't install emacs22 icons.
+
 	* Makefile.in (emacs_transform): New variable.
 	(install-etc): Prefer a make variable to a shell variable.
 
