--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-22  Glenn Morris  <rgm@gnu.org>
+
+	* tips.texi (Coding Conventions): Recommend cl-lib over cl.
+
 2012-10-15  Chong Yidong  <cyd@gnu.org>
 
 	* macros.texi (Defining Macros): defmacro is now a macro.
