--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-23  Chong Yidong  <cyd@gnu.org>
+
+	* newcomment.el (comment-normalize-vars): Doc fix (Bug#12583).
+
 2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* subr.el (internal-temp-output-buffer-show): Rename from
