--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-23  Chong Yidong  <cyd@gnu.org>
+
+	* keymaps.texi (Key Sequences): Avoid referring to Edit Macro mode
+	(Bug#12529).
+
 2012-10-22  Glenn Morris  <rgm@gnu.org>
 
 	* os.texi (Recording Input): Tiny fix.
