Make unused variable font-list-limit obsolete, and move it out of C.
* display.texi (Font Lookup): Remove font-list-limit.

* lisp/startup.el (command-line):
* lisp/cus-start.el: Don't refer to font-list-limit.

* lisp/faces.el (font-list-limit): Define as an obsolete variable.

* xfaces.c (Vfont_list_limit): Move unused variable to faces.el.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -890,6 +890,7 @@ See the "Face Attributes" section of the Elisp manual.
 *** `window-system-version'
 *** `dired-pop-to-buffer' (use `dired-mark-pop-up')
 *** `query-replace-interactive'
+*** `font-list-limit' (has had no effect since Emacs < 23)
 
 
 * Changes in Emacs 24.3 on non-free operating systems
