--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-10-23  Chong Yidong  <cyd@gnu.org>
 
+	* display.texi (Font Lookup): Remove font-list-limit.
+
 	* keymaps.texi (Key Sequences): Avoid referring to Edit Macro mode
 	(Bug#12529).
 
