--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* hooks.texi (Standard Hooks): Clarify that -hooks is deprecated.
+
 2012-10-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix outdated timestamp documentation in Elisp manual (bug#12706).
