--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-23  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (emacs_transform): Remove.
+	(install-man): Revert 2012-10-21 change.  (Bug#12713)
+
 2012-10-21  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (install-etc): Don't install emacs22 icons.
