--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* vc/diff-mode.el (diff-hunk): `save-excursion' while refining
+	(bug#12671).
+
 2012-10-23  Glenn Morris  <rgm@gnu.org>
 
 	* progmodes/gud.el (gud-menu-map):
