--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,6 +1,7 @@
 2012-10-23  Bastien Guerry  <bzg@gnu.org>
 
-	* text.texi (Org Authoring): Change @ref to @pxref.
+	* text.texi (Org Authoring): Use a comma after @ref to avoid the
+	insertion of a period in the Info output.
 
 2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
