--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-24  Chong Yidong  <cyd@gnu.org>
+
+	* keymaps.texi (Toolkit Differences): Node deleted.
+	(Easy Menu): New node.
+
 2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* hooks.texi (Standard Hooks): Clarify that -hooks is deprecated.
